# mira-sentinel

.github/workflows/: publish-github-sentinel-aider.yml  publish-github-sentinel.yml  publish-to-dhrupad-sah.yml
github-sentinel/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
github-sentinel/docs/: DEVELOPMENT_PROGRESS.md  DOCUMENTATION_TEMPLATE.md  GITHUB_APP_MIGRATION_SUMMARY.md  PRD.md  ai-analysis-format.md  api-reference.md  configuration-guide.md  development-guide.md  how-it-works.md  security-guide.md  system_architecture_workflow.md  troubleshooting-guide.md
github-sentinel/src/sentinel_system/: config.py  main.py
github-sentinel/src/sentinel_system/routers/: __init__.py  github.py  health.py  webhook.py
github-sentinel/src/sentinel_system/services/: __init__.py  aider_service.py  git_service.py  github_app_service.py  github_service.py  issue_processor.py  workspace_service.py
