[project]
name = "sentinel-system"
version = "0.1.0"
description = "Autonomous GitHub issue resolution system using Claude Code CLI"
authors = [
    {name = "Dhrupad Sah", email = "thedhrupad@gmail.com"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.1.0",
    "schedule>=1.2.0",
    "gitpython>=3.1.40",
    "PyJWT[crypto]>=2.8.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
start = "uvicorn src.sentinel_system.main:app --host 0.0.0.0 --port 8000"
dev = "uvicorn src.sentinel_system.main:app --host 0.0.0.0 --port 8000"
test = "pytest"
format = "black src tests"
lint = "ruff check src tests"
type-check = "mypy src"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
